@@ -13,6 +13,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <java.version>10</java.version>
     <maven.compiler.source>10</maven.compiler.source>
     <maven.compiler.target>10</maven.compiler.target>
     <spring.boot.version>2.0.3.RELEASE</spring.boot.version>
@@ -55,6 +56,18 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.apache.camel</groupId>-->
+      <!--<artifactId>camel-spring-boot-starter</artifactId>-->
+      <!--<version>2.22.0</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>org.apache.camel</groupId>-->
+      <!--<artifactId>camel-jetty</artifactId>-->
+      <!--<version>2.22.0</version>-->
+      <!--&lt;!&ndash;<scope>test</scope>&ndash;&gt;-->
+    <!--</dependency>-->
+
   </dependencies>
 
   <distributionManagement>
@@ -81,6 +94,9 @@
           <layout>JAR</layout>
           <addResources>true</addResources>
           <fork>true</fork>
+          <jvmArguments>
+              --module-path target/classes/lib
+          </jvmArguments>
         </configuration>
         <executions>
           <execution>
@@ -92,10 +108,28 @@
       </plugin>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.7.0</version>
         <configuration>
           <source>${maven.compiler.source}</source>
           <target>${maven.compiler.target}</target>
+          <compilerArgs>
+            <arg>--add-modules</arg>
+            <arg>java.xml.bind</arg>
+          </compilerArgs>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.20.1</version>
+        <configuration>
+          <argLine>--add-modules java.base</argLine>
+          <argLine>--modules-path target.classes.lib</argLine>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.0.2</version>
       </plugin>
     </plugins>
     <resources>
